--- a/index.html
+++ b/index.html
@@ -255,5 +255,6 @@
 <script src="js/card.js"></script>
 <script src="js/form.js"></script>
 <script src="js/events.js"></script>
+<script src="js/moves.js"></script>
 </body>
 </html>
